<resources>
    <string name="app_name">Dragg</string>
    <string name="nomeDragg">Dragg</string>
    <string name="LogoMain">TODO</string>
    <string name="cadastrar" translatable="false">Cadastrar</string>
    <string name="menu_home" translatable="false">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voltar" translatable="false">Voltar</string>
    <string name="ffff">TODO</string>
    <string name="vamos_come_ar" translatable="false">Vamos Começar</string>
    <string name="sobre_n_s" translatable="false">Sobre Nós</string>
    <string name="come_ar" translatable="false">Começar</string>
    <string name="deslogar">Deslogar</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-Mail</string>
    <string name="senhaa">Senha</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="seja_bem_vindo">Seja Bem-vindo</string>
    <string name="oque_deseja_hoje">Oque deseja hoje?</string>
    <string name="jogos">Jogos</string>
    <string name="imagens">Imagens</string>
    <string name="outros">Outros</string>
    <string name="sobre">Sobre</string>
    <string name="informa_o">Informação</string>
    <string name="seguro">Seguro</string>
    <string name="criador">Criador</string>
    <string name="esporte">Esporte</string>
    <string name="offline">Offline</string>
    <string name="anime">Anime</string>
    <string name="recomendado">Recomendado</string>
    <string name="selecione_o_g_nero_do_jogo">Selecione o gênero do jogo</string>
    <string name="texto_informacao">Um App desenvolvido para pessoas da comunidade gamer mobile que esteja procurando por jogos recomendados por outros gamers. Tendo nele algumas funções a mais como uma parte para baixar papeis de parede dos jogos que estão sendo recomendado para o usuário.</string>
    <string name="texto_criador">Olá me chamo Dhominy Murillo e venho trazendo esse App para a galera dos games. Lembre que os jogos estimulam a criatividade e ainda trazem horas incríveis de diversão. Então espero que gostem e aproveitem bastante e se divirtam.</string>
    <string name="bom_jogoooo">Bom Jogoooo !!!</string>
    <string name="texto_seguro">Um App totalmente seguro e confiavel, pode ficar tranquilo os links em que você vai entrar vão te levar para a PlayStore ✅ (Jogos populares jogados por varias pessoas ao seu redor)</string>
    <string name="texto_clash">Clash Royale é um jogo de estratégia em tempo real desenvolvido pela Supercell. Os jogadores constroem baralhos de cartas com tropas, feitiços e edifícios, competindo em partidas multiplayer para destruir as torres do adversário.</string>
    <string name="texto_freefire">O jogo coloca 50 jogadores em uma ilha onde lutam pela sobrevivência até que reste apenas um vencedor. Os jogadores procuram armas e equipamentos, enquanto o mapa encolhe gradualmente.</string>
    <string name="texto_mbl">Mobile Legends é um jogo de batalha multiplayer nele, equipes de cinco jogadores competem para destruir a base inimiga enquanto lutam contra heróis controlados por outros jogadores.</string>
    <string name="texto_fifa">É um jogo de futebol, o jogo oferece uma experiência de futebol simplificada e é atualizado regularmente com base nas temporadas e tem eventos do futebol real e eventos para ganhar recompensas e aprimorar suas equipes.</string>
    <string name="baixar">Baixar</string>
    <string name="texto_kimetsu">Jogo baseado na historia do anime Demon Slayer, os jogadores enfrentam demônios em combates de ação, controlando personagens da série, como Tanjiro e Nezuko. O jogo combina elementos de luta e RPG.</string>
    <string name="baixe_um_papel_de_parede">Baixe um papel de parede</string>
    <string name="baixar_imagem">Baixar Imagem</string>
    <string name="entrarr">E͟n͟t͟r͟a͟r</string>
    <string name="resumo_dbz">É um jogo de luta móvel baseado na popular franquia Dragon Ball. Os jogadores constroem equipes de personagens icônicos, participam de batalhas em tempo real e exploram uma história original.</string>
    <string name="resumo_naruto">é um jogo móvel baseado na franquia Naruto. Os jogadores constroem fortalezas e participam de batalhas estratégicas com personagens de Naruto e Boruto. O jogo combina elementos de ação e defesa de torres.</string>
    <string name="resumo_onepiece">é um jogo móvel de ação em equipe baseado na famosa série One Piece. Os jogadores formam equipes com personagens icônicos e competem em batalhas multiplayer em tempo real para coletar tesouros e derrotar seus oponentes.</string>
    <string name="resumo_myhero">é um jogo de ação baseado no popular anime e mangá My Hero Academia. Os jogadores montam equipes de heróis e vilões do mundo de My Hero Academia e participam de batalhas táticas em tempo real.</string>
    <string name="resumo_pecado_capital">é um jogo móvel de RPG de aventura baseado no anime e mangá The Seven Deadly Sins. Os jogadores embarcam em uma jornada com personagens do mundo da série, participando de batalhas estratégicas.</string>
    <string name="resumo_ufc">é um jogo de videogame de luta baseado no UFC. Os jogadores podem escolher entre uma ampla variedade de lutadores do UFC e competir em combates realistas e estratégicos, com controles sofisticados.</string>
    <string name="conta">Conta</string>
    <string name="resumo_nba">É um jogo que permite aos jogadores montar suas próprias equipes, competir em partidas de basquete em tempo real e participar de eventos e desafios. O jogo oferece a autenticidade da NBA,</string>
    <string name="resumo_the_spike">O jogo se concentra em contar uma história envolvente à medida que os jogadores avançam em sua carreira no vôlei, tornando-se um dos melhores times do mundo.</string>
    <string name="resumo_ping_pong">O jogo é conhecido por sua mecânica de jogabilidade intuitiva e controles responsivos, proporcionando uma experiência emocionante de tênis de mesa.</string>
    <string name="resumo_ball_pool">É um jogo de sinuca para dispositivos móveis e redes sociais. Os jogadores competem em partidas de sinuca 8-ball, desafiando amigos ou jogadores aleatórios online.</string>
    <string name="resumo_shadow_fight">é um jogo de luta que combina elementos de RPG e artes marciais. Os jogadores exploram um mundo de sombras, montam personagens, aprendem habilidades.</string>
    <string name="resumo_stickman">É um jogo de ação que apresenta heróis stickman em combates contra hordas de inimigos e chefes poderosos. O jogo é conhecido por sua jogabilidade simples e ação em estilo de desenho.</string>
    <string name="resumo_vectorr">É um jogo de parkour onde os jogadores controlam um personagem que precisa superar obstáculos e inimigos em uma cidade futurística. Os jogadores tentam escapar de um regime totalitário.</string>
    <string name="resumo_altos">É um jogo de snowboarding que oferece uma experiência relaxante de esqui na neve. Os jogadores deslizam por belas paisagens montanhosas, coletam lhamas perdidas e realizam manobras acrobáticas.</string>
    <string name="resumo_tomb_mask">É um jogo de ação onde os jogadores exploram uma tumba verticalmente, deslizando o personagem através de labirintos e evitando obstáculos enquanto coletam pontos e itens.</string>
</resources>