<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="86dp"
        android:text="@string/nomeDragg"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/LogoMain"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodragg"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:drawableLeft="@drawable/demail"
        android:drawablePadding="3sp"
        android:ems="10"
        android:hint="E-Mail"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editTextSenhaLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/editTextSenhaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:drawableLeft="@drawable/dsenha"
        android:drawablePadding="3sp"
        android:ems="10"
        android:hint="@string/senhaa"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/buttonAcessar"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAcessar2"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/botaobackground2"
        android:onClick="cadastrar"
        android:text="@string/cadastre_se"
        android:textColor="#479BFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAcessar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAcessar"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/botaobackground"
        android:backgroundTint="@color/black"
        android:onClick="validarAutenticacao"
        android:text="@string/entrar"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAcessar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenhaLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>