<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    tools:context=".MenuActivity">


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="96dp"
        android:text="@string/seja_bem_vindo"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="239dp"
        android:layout_marginEnd="75dp"
        android:text="@string/oque_deseja_hoje"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="141dp"
        android:layout_height="132dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="135dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/logodragg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVoltar"
        android:layout_width="58dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="349dp"
        android:background="@drawable/seta"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnJogos"
        android:layout_width="285dp"
        android:layout_height="65dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/botaobackground3"
        android:text="@string/jogos"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnImagens"
        android:layout_width="285dp"
        android:layout_height="65dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="434dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/botaobackground3"
        android:text="@string/imagens"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOutros"
        android:layout_width="285dp"
        android:layout_height="65dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="533dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/botaobackground3"
        android:text="@string/outros"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>