<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    tools:context=".Jogos1Activity">

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVoltar5"
        android:layout_width="58dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="346dp"
        android:background="@drawable/seta"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="171dp"
        android:layout_height="162dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="@drawable/logodragg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAnime"
        android:layout_width="172dp"
        android:layout_height="138dp"
        android:layout_marginStart="223dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/botaobackground3"
        android:text="@string/anime"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOffline"
        android:layout_width="172dp"
        android:layout_height="138dp"
        android:layout_marginStart="223dp"
        android:layout_marginTop="447dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/botaobackground3"
        android:text="@string/offline"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEsporte"
        android:layout_width="172dp"
        android:layout_height="138dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="447dp"
        android:layout_marginEnd="223dp"
        android:background="@drawable/botaobackground3"
        android:text="@string/esporte"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRecomendado"
        android:layout_width="172dp"
        android:layout_height="138dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="223dp"
        android:background="@drawable/botaobackground3"
        android:text="@string/recomendado"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="262dp"
        android:layout_height="87dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/botaobackground2"
        android:gravity="center"
        android:text="@string/selecione_o_g_nero_do_jogo"
        android:textColor="@color/fundo"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

</androidx.constraintlayout.widget.ConstraintLayout>